# nwn-translator-ai

./: .env.example  .gitignore  CLAUDE.md  KNOWN_BUGS.md  LICENSE  PROJECT_MAP.md  README.md  README_EN.md  REFACTORING_STATUS.md  TOKEN_ECONOMY_ROADMAP.md  compare_mods.py  diff_output.txt  dump_ifo.py  module_orig.ifo  module_trans.ifo  project-tree.txt  pyproject.toml  requirements.txt  run-web-ui.bat
.claude/: settings.local.json
docker/: .env.example  Dockerfile  Dockerfile.nginx  docker-compose.yml  nginx.conf
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend/src/: App.vue  locales.js  style.css
frontend/src/api/: client.js
frontend/src/components/: CustomSelect.vue  FileUpload.vue  HistoryPanel.vue  ModelSelect.vue  ProgressTracker.vue  ResultPanel.vue  TranslationEditor.vue  TranslationForm.vue
frontend/src/composables/: useI18n.js  useTranslation.js
scripts/: compare_mods.py  compare_talias.py  dump_gff_strings.py  dump_mod_strings.py  run_web_ui.py
src/nwn_translator/: __init__.py  async_utils.py  cli.py  config.py  glossary.py  json_utils.py  main.py  nwn_constants.py  prompts.py  race_dictionary.py  translation_logging.py
src/nwn_translator/ai_providers/: __init__.py  base.py  gemini_provider.py  grok_provider.py  mistral_provider.py  openai_provider.py  openrouter_provider.py  polza_provider.py
src/nwn_translator/context/: dialog_formatter.py  entity_extractor.py  relevance.py  world_context.py
src/nwn_translator/extractors/: __init__.py  area_extractor.py  base.py  creature_extractor.py  dialog_extractor.py  git_extractor.py  item_extractor.py  journal_extractor.py  module_extractor.py  ncs_extractor.py
src/nwn_translator/file_handlers/: __init__.py  erf_reader.py  erf_writer.py  gff_handler.py  gff_parser.py  gff_patcher.py  gff_writer.py  ncs_parser.py  ncs_patcher.py  tlk_reader.py
tests/: __init__.py  test_batch_timeouts.py  test_database_ncs_item_id.py  test_entity_extractor.py  test_erf_writer.py  test_extractors.py  test_gff_patcher.py  test_gff_writer.py  test_git_extractor.py  test_git_instance_extraction.py  test_git_workspace_diagnostic.py  test_glossary_filter.py  test_integration.py  test_integration_dialog.py  test_json_utils.py  test_ncs.py  test_openrouter_provider.py  test_output_naming.py  test_phase3_profiles.py  test_prefix_translation_cache.py  test_prompts.py  test_providers.py  test_race_dictionary.py  test_rebuild_inject_pipeline.py  test_relevance.py  test_target_lang_game_support.py  test_token_handler.py  test_translation_manager.py  test_web_api.py  test_world_context_filter.py
(+36 files in other folders)
